UI redesign: black and green
